fixing overflow of top labels in the graph

--- a/src/components/BarGraph/BarGraph.scss
+++ b/src/components/BarGraph/BarGraph.scss
@@ -3,22 +3,17 @@
 
   .graph-inner {
     display: flex;
-    height: 150px;
+    height: 170px;
     width: 250px;
-    /* border-left: 1px solid #dff1f5; */
-    /* border-bottom: 1px solid #dff1f5; */
     position: relative;
-
-    // & > div:last-child {
-    //   margin-right: 15px;
-    // }
   }
 
   .bar-wrapper {
-    height: calc(100% - 20px);
+    height: calc(100% - 40px);
     position: relative;
     min-width: 25px;
     margin-left: 20px;
+    margin-top: 20px;
     background: rgb(236, 249, 255);
     background-image: linear-gradient(#cfefff, #d2faff);
 
@@ -45,10 +40,6 @@
     transition: min-height 0.8s;
     background-image: linear-gradient(#a2e0ff, #b1f2fb);
 
-    // .bar-value {
-    //   display: none;
-    // }
-
     .bar-value {
       display: block;
       position: absolute;
@@ -67,7 +58,8 @@
   position: absolute;
   left: 0;
   width: 100%;
-  height: calc(100% - 20px);
+  height: calc(100% - 40px);
+  margin-top: 20px;
   border-left: 1px solid #dff1f5;
 
   .x-axis-lines {
